First commited as before_50364_rev1