@@ -36,7 +36,7 @@ public class FormImages {
 	}
 
 	private ResourceManagerManger manager = new ResourceManagerManger();
-	private Map<Integer, AbstractImageDescriptor> descriptors;
+	private Map descriptors;
 
 	private FormImages() {
 	}
@@ -54,7 +54,6 @@ public class FormImages {
 			fLength = length;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof AbstractImageDescriptor) {
 				AbstractImageDescriptor id = (AbstractImageDescriptor)obj;
@@ -69,11 +68,10 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = 0;
-			for (RGB fRGB : fRGBs)
-				hash = hash * 7 + fRGB.hashCode();
+			for (int i = 0; i < fRGBs.length; i++)
+				hash = hash * 7 + fRGBs[i].hashCode();
 			hash = hash * 7 + fLength;
 			return hash;
 		}
@@ -90,7 +88,6 @@ public class FormImages {
 			fMarginHeight = marginHeight;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -101,7 +98,6 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
 			hash = hash * 7 + new Integer(fTheight).hashCode();
@@ -109,12 +105,10 @@ public class FormImages {
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color color1 = new Color(device, fRGBs[0]);
@@ -146,7 +140,6 @@ public class FormImages {
 			fPercents = percents;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof ComplexImageDescriptor) {
 				ComplexImageDescriptor id = (ComplexImageDescriptor) obj;
@@ -158,8 +151,8 @@ public class FormImages {
 					// if the only thing that isn't the same is the background color
 					// still return true if it does not matter (percents add up to 100)
 					int sum = 0;
-					for (int fPercent : fPercents)
-						sum += fPercent;
+					for (int i = 0; i < fPercents.length; i++)
+						sum += fPercents[i];
 					if (sum >= 100)
 						return true;
 				}
@@ -167,21 +160,18 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Boolean.valueOf(fVertical).hashCode();
-			for (int fPercent : fPercents)
-				hash = hash * 7 + new Integer(fPercent).hashCode();
+			hash = hash * 7 + new Boolean(fVertical).hashCode();
+			for (int i = 0; i < fPercents.length; i++)
+				hash = hash * 7 + new Integer(fPercents[i]).hashCode();
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			int width = fVertical ? 1 : fLength;
 			int height = fVertical ? fLength : 1;
@@ -194,8 +184,8 @@ public class FormImages {
 			Color bg = fBgRGB == null ? null : new Color(device, fBgRGB);
 			drawTextGradient(gc, width, height, colors, fPercents, fVertical, bg);
 			gc.dispose();
-			for (Color color : colors)
-				color.dispose();
+			for (int i = 0; i < colors.length; i++)
+				colors[i].dispose();
 			if (bg != null)
 				bg.dispose();
 			return gradient;
@@ -259,7 +249,6 @@ public class FormImages {
 			fMarginHeight = marginHeight;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -269,7 +258,6 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
 			hash = hash * 7 + new Integer(fTheight).hashCode();
@@ -277,12 +265,10 @@ public class FormImages {
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color originalBgColor = new Color(device, fRGBs[0]);
@@ -308,7 +294,6 @@ public class FormImages {
 			super(new Color[] { color1, color2 }, realtheight, theight, marginHeight);
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color color1 = new Color(device, fRGBs[0]);
@@ -350,8 +335,8 @@ public class FormImages {
 			int length, boolean vertical, Color bg, Display display) {
 		if (colors.length == 0)
 			return null;
-		for (Color color : colors)
-			if (color == null || color.isDisposed())
+		for (int i = 0; i < colors.length; i++)
+			if (colors[i] == null || colors[i].isDisposed())
 				return null;
 		if (bg != null && bg.isDisposed())
 			return null;
@@ -369,7 +354,7 @@ public class FormImages {
 	public synchronized boolean markFinished(Image image, Display display) {
 		checkHashMaps();
 		Integer imageHashCode = new Integer(image.hashCode());
-		AbstractImageDescriptor desc = descriptors.get(imageHashCode);
+		AbstractImageDescriptor desc = (AbstractImageDescriptor)descriptors.get(imageHashCode);
 		if (desc != null) {
 			LocalResourceManager resourceManager = manager.getResourceManager(display);
 			resourceManager.destroyImage(desc);
@@ -387,7 +372,7 @@ public class FormImages {
 
 	private void checkHashMaps() {
 		if (descriptors == null)
-			descriptors = new HashMap<>();
+			descriptors = new HashMap();
 	}
 
 	private void validateHashMaps() {
