@@ -48,6 +48,11 @@ public class MarkerCompletionField extends MarkerField {
 					.getControl());
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.EditingSupport#canEdit(java.lang.Object)
+		 */
 		@Override
 		protected boolean canEdit(Object element) {
 			if (element instanceof MarkerEntry)
@@ -56,17 +61,33 @@ public class MarkerCompletionField extends MarkerField {
 			return false;
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.EditingSupport#getCellEditor(java.lang.Object)
+		 */
 		@Override
 		protected CellEditor getCellEditor(Object element) {
 			return editor;
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.EditingSupport#getValue(java.lang.Object)
+		 */
 		@Override
 		protected Object getValue(Object element) {
-			return Boolean.valueOf(((MarkerEntry) element).getAttributeValue(
+			return new Boolean(((MarkerEntry) element).getAttributeValue(
 					IMarker.DONE, false));
 		}
 
+		/*
+		 * (non-Javadoc)
+		 *
+		 * @see org.eclipse.jface.viewers.EditingSupport#setValue(java.lang.Object,
+		 *      java.lang.Object)
+		 */
 		@Override
 		protected void setValue(Object element, Object value) {
 			MarkerEntry entry = (MarkerEntry) element;
@@ -96,16 +117,32 @@ public class MarkerCompletionField extends MarkerField {
 		super();
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#compare(org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem,
+	 *      org.eclipse.ui.internal.provisional.views.markers.api.MarkerItem)
+	 */
 	@Override
 	public int compare(MarkerItem item1, MarkerItem item2) {
 		return getDoneConstant(item2) - getDoneConstant(item1);
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getColumnHeaderText()
+	 */
 	@Override
 	public String getColumnHeaderText() {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getColumnTooltipText()
+	 */
 	@Override
 	public String getColumnTooltipText() {
 		return getName();
@@ -121,6 +158,11 @@ public class MarkerCompletionField extends MarkerField {
 				getImageManager());
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getDefaultColumnWidth(org.eclipse.swt.widgets.Control)
+	 */
 	@Override
 	public int getDefaultColumnWidth(Control control) {
 		return 40;
@@ -146,6 +188,11 @@ public class MarkerCompletionField extends MarkerField {
 		return done;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.api.MarkerField#getEditingSupport(org.eclipse.jface.viewers.ColumnViewer)
+	 */
 	@Override
 	public EditingSupport getEditingSupport(ColumnViewer viewer) {
 
@@ -171,11 +218,21 @@ public class MarkerCompletionField extends MarkerField {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.internal.provisional.views.markers.MarkerField#getValue(org.eclipse.ui.internal.provisional.views.markers.MarkerItem)
+	 */
 	@Override
 	public String getValue(MarkerItem item) {
 		return MarkerSupportInternalUtilities.EMPTY_STRING;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see org.eclipse.ui.views.markers.MarkerField#update(org.eclipse.jface.viewers.ViewerCell)
+	 */
 	@Override
 	public void update(ViewerCell cell) {
 		super.update(cell);
